<?xml version="1.0"?>
<package format="2">
  <name>axis_ptz_action_server</name>
  <version>0.2.0</version>
  <description>PTZ control services for Axix PTZ cameras</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <depend>ptz_action_server_msgs</depend>
  <depend>rclpy</depend>
  <depend>python3-transforms3d</depend>
  
  <depend>axis_camera</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
