<?xml version="1.0"?>
<package format="2">
  <name>flir_ptu_action_server</name>
  <version>0.1.6</version>
  <description>PTZ control services for the Flir D46 and E46 PTU devices</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>flir_ptu_driver</depend>
  <depend>ptz_action_server_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
