<?xml version="1.0"?>
<package format="2">
  <name>flir_ptu_action_server</name>
  <version>0.1.9</version>
  <description>PTZ control services for the Flir D46 and E46 PTU devices</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>flir_ptu_driver</depend>
  <depend>ptz_action_server_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
