<?xml version="1.0"?>
<package format="2">
  <name>pelcod_ptz_action_server</name>
  <version>0.0.0</version>
  <description>PTZ control services for the Proton PTZ and other Pelco-D compatible cameras/PTUs</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>ptz_action_server_msgs</depend>
  <depend>rospy</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>flir_ptu_driver</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
  </export>
</package>
