<?xml version="1.0"?>
<package format="2">
  <name>ptz_action_server_msgs</name>
  <version>0.0.0</version>
  <description>Messages for controlling Pan-Tilt and Pan-Tilt-Zoom devices</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>genmsg</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
