<?xml version="1.0"?>
<package format="3">
  <name>ptz_action_server_msgs</name>
  <version>0.1.9</version>
  <description>Messages for controlling Pan-Tilt and Pan-Tilt-Zoom devices</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
