<?xml version="1.0"?>
<package format="2">
  <name>simulated_ptz_action_server</name>
  <version>0.0.0</version>
  <description>Controller node for a simulated PTZ camera</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ptz_action_server_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
