<?xml version="1.0"?>
<package format="2">
  <name>simulated_ptz_action_server</name>
  <version>0.2.0</version>
  <description>Controller node for a simulated PTZ camera</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <license>BSD</license>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ptz_action_server_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>python3-transforms3d</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
